feat(HCM): add HCM mixin, use `forced-colors`  (#8489)
* feat(HCM): add HCM mixin, use

* feat(HCM): update more components

* fix(Slider): add hcm support

* fix(Tabs): add hcm support

* fix(Toggle): add hcm support

* fix(Toggle): add hcm focus on switch

* fix(Tooltip): add hcm support

* fix(TooltipDefinition): add hcm support

* feat(HCM): update more components

* feat(HCM): update first half of components

* feat(HCM): a few more tweaks

Co-authored-by: D.A. Kahn <dakahn@protonmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/accordion/_accordion.scss
+++ b/packages/components/src/components/accordion/_accordion.scss
@@ -119,13 +119,6 @@
     fill: $icon-primary;
     transform: rotate(-270deg) #{'/*rtl:ignore*/'};
     transition: all $duration--fast-02 motion(standard, productive);
-
-    // Windows, Firefox HCM Fix
-    @media screen and (-ms-high-contrast: active),
-      screen and (prefers-contrast) {
-      // `ButtonText` is a CSS2 system color to help improve colors in HCM
-      fill: ButtonText;
-    }
   }
 
   .#{$prefix}--accordion__title {
@@ -201,13 +194,6 @@
     .#{$prefix}--accordion__arrow {
       fill: $icon-primary;
       transform: rotate(-90deg) #{'/*rtl:ignore*/'};
-
-      // Windows, Firefox HCM Fix
-      @media screen and (-ms-high-contrast: active),
-        screen and (prefers-contrast) {
-        // `ButtonText` is a CSS2 system color to help improve colors in HCM
-        fill: ButtonText;
-      }
     }
   }
 
@@ -251,6 +237,12 @@
 
   .#{$prefix}--accordion__title.#{$prefix}--skeleton__text {
     margin-bottom: 0;
+  }
+
+  // Windows HCM fix
+  .#{$prefix}--accordion__arrow,
+  .#{$prefix}--accordion__item--active .#{$prefix}--accordion__arrow {
+    @include high-contrast-mode('icon-fill');
   }
 }
 
