--- a/packages/components/src/components/text-input/_text-input.scss
+++ b/packages/components/src/components/text-input/_text-input.scss
@@ -123,13 +123,6 @@
       svg {
         fill: $icon-secondary;
         transition: fill $duration--fast-01 motion(standard, productive);
-
-        // Windows, Firefox HCM Fix
-        @media screen and (-ms-high-contrast: active),
-          screen and (prefers-contrast) {
-          // `ButtonText` is a CSS2 system color to help improve colors in HCM
-          fill: ButtonText;
-        }
       }
     }
 
@@ -356,6 +349,15 @@
   .#{$prefix}--text-input__field-outer-wrapper--inline {
     flex: 8;
     flex-direction: column;
+  }
+
+  // Windows HCM fix
+  .#{$prefix}--text-input--password__visibility,
+    // TODO: remove selector above
+  .#{$prefix}--btn.#{$prefix}--btn--icon-only.#{$prefix}--text-input--password__visibility__toggle.#{$prefix}--tooltip__trigger svg,
+    .#{$prefix}--btn.#{$prefix}--btn--icon-only.#{$prefix}--text-input--password__visibility__toggle.#{$prefix}--tooltip__trigger:hover
+    svg {
+    @include high-contrast-mode('icon-fill');
   }
 }
 
