--- a/packages/components/src/components/tooltip/_tooltip.scss
+++ b/packages/components/src/components/tooltip/_tooltip.scss
@@ -336,13 +336,6 @@
 
   .#{$prefix}--tooltip__trigger svg {
     fill: $icon-secondary;
-
-    // Windows, Firefox HCM Fix
-    @media screen and (-ms-high-contrast: active),
-      screen and (prefers-contrast) {
-      // `ButtonText` is a CSS2 system color to help improve colors in HCM
-      fill: ButtonText;
-    }
   }
 
   .#{$prefix}--tooltip__trigger:not(.#{$prefix}--btn--icon-only) {
@@ -384,13 +377,6 @@
     border-radius: rem(2px);
     color: $text-inverse;
     word-wrap: break-word;
-
-    // Windows, Firefox HCM Fix
-    @media screen and (-ms-high-contrast: active),
-      screen and (prefers-contrast) {
-      // `ButtonText` is a CSS2 system color to help improve colors in HCM
-      border: 1px solid transparent;
-    }
 
     // @todo this can be deprecated in v11 since focus should always be on the content container not the tooltip
     // V11: remove in V11
@@ -626,13 +612,6 @@
     &:focus {
       svg {
         fill: $icon-secondary;
-
-        // Windows, Firefox HCM Fix
-        @media screen and (-ms-high-contrast: active),
-          screen and (prefers-contrast) {
-          // `ButtonText` is a CSS2 system color to help improve colors in HCM
-          fill: ButtonText;
-        }
       }
     }
   }
@@ -709,6 +688,26 @@
   .#{$prefix}--tooltip__trigger:not(.#{$prefix}--tooltip--hidden)
     .#{$prefix}--assistive-text {
     pointer-events: all;
+  }
+
+  // Windows HCM fix
+  /* stylelint-disable */
+  .#{$prefix}--tooltip__trigger svg,
+  .#{$prefix}--tooltip__trigger:hover svg,
+  .#{$prefix}--tooltip__trigger:focus svg {
+    @include high-contrast-mode('icon-fill');
+  }
+
+  .#{$prefix}--tooltip__trigger:focus svg {
+    @include high-contrast-mode('focus');
+  }
+
+  .#{$prefix}--tooltip {
+    @include high-contrast-mode('outline');
+  }
+
+  .#{$prefix}--assistive-text {
+    @include high-contrast-mode('outline');
   }
 }
 
