--- a/packages/components/src/components/notification/_inline-notification.scss
+++ b/packages/components/src/components/notification/_inline-notification.scss
@@ -49,12 +49,6 @@
     @include carbon--breakpoint(max) {
       max-width: rem(832px);
     }
-
-    // Firefox HCM fix
-    @media screen and (prefers-contrast) {
-      outline-style: solid;
-      outline-width: 1px;
-    }
   }
 
   .#{$prefix}--inline-notification:not(.#{$prefix}--inline-notification--low-contrast)
@@ -249,12 +243,6 @@
     box-shadow: none;
     outline: 2px solid $focus-inverse;
     outline-offset: -2px;
-
-    // Firefox HCM Fix
-    @media screen and (prefers-contrast) {
-      border-style: dotted;
-      outline-style: dotted;
-    }
   }
 
   .#{$prefix}--inline-notification--low-contrast
@@ -291,11 +279,6 @@
     &:focus {
       outline: 2px solid $focus-inverse;
       outline-offset: -2px;
-
-      // Firefox HCM fix
-      @media screen and (prefers-contrast) {
-        outline-style: dotted;
-      }
     }
 
     .#{$prefix}--inline-notification__close-icon {
@@ -317,6 +300,22 @@
     .#{$prefix}--inline-notification__close-icon {
     fill: $icon-primary;
   }
+
+  // Windows HCM fix
+  /* stylelint-disable */
+  .#{$prefix}--inline-notification {
+    @include high-contrast-mode('outline');
+  }
+
+  .#{$prefix}--inline-notification__close-button:focus,
+  .#{$prefix}--btn.#{$prefix}--btn--ghost.#{$prefix}--inline-notification__action-button:focus {
+    @include high-contrast-mode('focus');
+  }
+
+  .#{$prefix}--inline-notification__icon {
+    @include high-contrast-mode('icon-fill');
+  }
+  /* stylelint-enable */
 }
 
 @include exports('inline-notifications') {
