--- a/packages/components/src/components/slider/_slider.scss
+++ b/packages/components/src/components/slider/_slider.scss
@@ -52,13 +52,6 @@
     background: $border-subtle;
     cursor: pointer;
     transform: translate(0%, -50%);
-
-    // Windows, Firefox HCM Fix
-    @media screen and (-ms-high-contrast: active),
-      screen and (prefers-contrast) {
-      // `ButtonText` is a CSS2 system color to help improve colors in HCM
-      border: 1px solid transparent;
-    }
   }
 
   .#{$prefix}--slider__track:before {
@@ -82,13 +75,6 @@
     transform: translate(0%, -50%);
     transform-origin: left;
     transition: background $duration--fast-02 motion(standard, productive);
-
-    // Windows, Firefox HCM Fix
-    @media screen and (-ms-high-contrast: active),
-      screen and (prefers-contrast) {
-      // `ButtonText` is a CSS2 system color to help improve colors in HCM
-      border: 1px solid transparent;
-    }
   }
 
   .#{$prefix}--slider__thumb {
@@ -117,23 +103,11 @@
       box-shadow: inset 0 0 0 2px $interactive, inset 0 0 0 3px $layer;
       // 20px / 14px = 1.4286
       transform: translate(-50%, -50%) scale(1.4286);
-
-      // Firefox HCM Fix
-      @media screen and (prefers-contrast) {
-        outline-style: dotted;
-      }
     }
 
     &:active {
       box-shadow: inset 0 0 0 2px $interactive;
       transform: translate(-50%, -50%) scale(1.4286);
-    }
-
-    // Windows, Firefox HCM Fix
-    @media screen and (-ms-high-contrast: active),
-      screen and (prefers-contrast) {
-      // `ButtonText` is a CSS2 system color to help improve colors in HCM
-      outline: 1px solid ButtonText;
     }
   }
 
@@ -234,6 +208,19 @@
     cursor: default;
     pointer-events: none;
   }
+
+  // Windows HCM fix
+  /* stylelint-disable */
+  .#{$prefix}--slider__thumb {
+    @include high-contrast-mode('outline');
+  }
+  .#{$prefix}--slider__thumb:focus {
+    @include high-contrast-mode('focus');
+  }
+  .#{$prefix}--slider__track {
+    @include high-contrast-mode('outline');
+  }
+  /* stylelint-enable */
 }
 
 @include exports('slider') {
