--- a/packages/components/src/components/toggle/_toggle.scss
+++ b/packages/components/src/components/toggle/_toggle.scss
@@ -296,13 +296,6 @@
       transition: box-shadow $duration--fast-01 motion(exit, productive),
         background-color $duration--fast-01 motion(exit, productive);
       will-change: box-shadow;
-
-      // Windows, Firefox HCM Fix
-      @media screen and (-ms-high-contrast: active),
-        screen and (prefers-contrast) {
-        // `ButtonText` is a CSS2 system color to help improve colors in HCM
-        border: 1px solid ButtonText;
-      }
     }
 
     // Toggle circle
@@ -318,13 +311,6 @@
       border-radius: 50%;
       content: '';
       transition: transform $duration--fast-01 motion(exit, productive);
-
-      // Windows, Firefox HCM Fix
-      @media screen and (-ms-high-contrast: active),
-        screen and (prefers-contrast) {
-        // `ButtonText` is a CSS2 system color to help improve colors in HCM
-        border: 3px solid ButtonText;
-      }
     }
 
     .#{$prefix}--toggle-input__label & {
@@ -382,13 +368,6 @@
     + .#{$prefix}--toggle-input__label
     > .#{$prefix}--toggle__switch::before {
     box-shadow: 0 0 0 1px $focus-inset, 0 0 0 3px $focus;
-
-    // Windows, Firefox HCM Fix
-    @media screen and (-ms-high-contrast: active),
-      screen and (prefers-contrast) {
-      // `ButtonText` is a CSS2 system color to help improve colors in HCM
-      outline: 1px solid ButtonText;
-    }
   }
 
   //----------------------------------------------
@@ -479,6 +458,22 @@
     .#{$prefix}--toggle__label-text {
       margin-bottom: $carbon--spacing-03;
     }
+  }
+
+  // Windows HCM fix
+  .#{$prefix}--toggle__switch::after,
+  .#{$prefix}--toggle__switch::before {
+    @include high-contrast-mode('outline');
+  }
+
+  // stylelint-disable-next-line no-duplicate-selectors
+  .#{$prefix}--toggle-input:focus
+    + .#{$prefix}--toggle-input__label
+    > .#{$prefix}--toggle__switch::before,
+  .#{$prefix}--toggle-input:active
+    + .#{$prefix}--toggle-input__label
+    > .#{$prefix}--toggle__switch::before {
+    @include high-contrast-mode('focus');
   }
 }
 
