--- a/packages/components/src/components/data-table/_data-table-action.scss
+++ b/packages/components/src/components/data-table/_data-table-action.scss
@@ -445,7 +445,9 @@
   //-------------------------------------------------
   //SMALL TOOLBAR
   //-------------------------------------------------
-  .#{$prefix}--table-toolbar--small {
+  // V11: remove --small
+  .#{$prefix}--table-toolbar--small,
+  .#{$prefix}--table-toolbar--sm {
     height: rem(32px);
 
     .#{$prefix}--toolbar-search-container-expandable,
@@ -531,31 +533,46 @@
   //-------------------------------------------------
   // SMALL BATCH ACTIONS
   //-------------------------------------------------
+  // V11: remove --small selector block
   .#{$prefix}--table-toolbar--small
+    .#{$prefix}--batch-actions
+    .#{$prefix}--action-list,
+  .#{$prefix}--table-toolbar--sm
     .#{$prefix}--batch-actions
     .#{$prefix}--action-list {
     height: rem(32px);
   }
 
-  .#{$prefix}--table-toolbar--small .#{$prefix}--toolbar-action {
+  // V11: remove --small selector block
+  .#{$prefix}--table-toolbar--small .#{$prefix}--toolbar-action,
+  .#{$prefix}--table-toolbar--sm .#{$prefix}--toolbar-action {
     width: rem(32px);
     height: rem(32px);
     padding: $spacing-03 0;
   }
 
-  .#{$prefix}--table-toolbar--small .#{$prefix}--btn--primary {
+  // V11: remove --small selector block
+  .#{$prefix}--table-toolbar--small .#{$prefix}--btn--primary,
+  .#{$prefix}--table-toolbar--sm .#{$prefix}--btn--primary {
     height: rem(32px);
     min-height: auto;
     padding-top: calc(0.375rem - 3px);
     padding-bottom: calc(0.375rem - 3px);
   }
 
+  // V11: remove --small selector block
   .#{$prefix}--table-toolbar--small
+    .#{$prefix}--btn--primary.#{$prefix}--batch-summary__cancel::before,
+  .#{$prefix}--table-toolbar--sm
     .#{$prefix}--btn--primary.#{$prefix}--batch-summary__cancel::before {
     top: rem(8px);
   }
 
+  // V11: remove --small selector block
   .#{$prefix}--table-toolbar--small
+    .#{$prefix}--toolbar-action
+    ~ .#{$prefix}--btn,
+  .#{$prefix}--table-toolbar--sm
     .#{$prefix}--toolbar-action
     ~ .#{$prefix}--btn {
     overflow: hidden;
